fixing selfserve modal spacing

--- a/assets/_styles/components/modal.scss
+++ b/assets/_styles/components/modal.scss
@@ -75,7 +75,6 @@
   }
 
   &__content {
-    margin: $gutter 0;
     @extend %clearfix;
   }
 
@@ -133,6 +132,9 @@
       padding: 12px 15px;
       background: $grey-4;
       border-bottom: 1px solid $grey-3;
+    }
+    &__content {
+      margin: $gutter 0;
     }
     &__close {
       top: 15px;
